# tonatiuhpp

./: .gitignore  AGENT.md  PROJECT_STATUS.md  coin_full_log.txt  readme.md
.github/workflows/: ci.yml  release.yml
docs/: benchmark_config_schema_v1.json  developer-setup.md  headless-benchmark.md  release-checklist.md  release-notes-v0.1.8.20.md  release-notes-v0.1.8.21.md  release-notes-v0.1.8.23.md  release-notes-v0.1.8.24.md  release-notes-v0.1.8.25.md
examples/benchmarks/: benchmark_config_v1.example.json
examples/facilities/SolarPilot/: layout.csv
help/: README.md
help/Sphinx/: conf.py  index.rst
installer/: README.md  create_ifw_repository.py  create_installer.py  prepare_ifw_payload.py  sync_ifw_metadata.py
installer/config/: config.xml
scripts/: TonatiuhPP.sh  TonatiuhXX.sh  build_deps.py  build_runtime_help.py  scrub_macos_agl_generated_links.py  tonatiuhpp.sh
source/: CMakeLists.txt
source/SunPath/: CMakeLists.txt
source/application/: CMakeLists.txt  resources.qrc  tonatiuhpp.rc.in
source/application/benchmark/: BenchmarkRunner.cpp  BenchmarkRunner.h
source/application/core/: CorePluginRegistry.cpp  CorePluginRegistry.h  RayTraceRunner.cpp  RayTraceRunner.h  SceneInstanceBuilder.cpp  SceneInstanceBuilder.h  SceneLoader.cpp  SceneLoader.h  TonatiuhCore.cpp  TonatiuhCore.h
source/application/headless/: HeadlessCommandRunner.cpp  HeadlessCommandRunner.h  HeadlessScriptHost.cpp  HeadlessScriptHost.h
source/application/main/: Document.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  PluginManager.cpp  main.cpp
source/application/parameters/: ParametersModel.cpp  ParametersTabs.cpp  ParametersView.cpp  ParametersView.h
source/application/script/: ScriptWindow.cpp
source/application/tree/: SceneTreeModel.cpp  SceneTreeModel.h
source/application/updater/: IfwUpdateService.cpp  IfwUpdateService.h  UpdateDialog.cpp  UpdateDialog.h  UpdateDialog.ui  UpdateReader.cpp  UpdateReader.h
source/application/view/: GraphicView.cpp  GraphicView.h  GridNode3D.cpp  SkyNode3D.cpp  SkyNode3D.h  SunNode3D.cpp  SunNode3D.h
source/application/widgets/: AboutDialog.cpp  AboutDialog.ui  AirDialog.cpp  SunDialog.cpp
source/kernel/: CMakeLists.txt
source/kernel/photons/: PhotonsAbstract.cpp  PhotonsAbstract.h  PhotonsBuffer.cpp  PhotonsBuffer.h
source/kernel/run/: InstanceNode.cpp  InstanceNode.h  RayTracer.cpp  RayTracer.h
source/kernel/scene/: TSFDoubleUnit.cpp
source/libraries/: CMakeLists.txt
source/plugins/: CMakeLists.txt
source/plugins/air/: CMakeLists.txt
source/plugins/air/AirMirval/: CMakeLists.txt
source/plugins/material/: CMakeLists.txt
source/plugins/material/MaterialSpecular/: CMakeLists.txt
source/plugins/photons/: CMakeLists.txt
source/plugins/photons/PhotonsFile/: CMakeLists.txt  PhotonsFile.cpp  PhotonsFile.h
source/plugins/random/: CMakeLists.txt
source/plugins/random/RandomMersenneTwister/: CMakeLists.txt
source/plugins/random/RandomRngStream/: CMakeLists.txt
source/plugins/shape/ShapeElliptic/: CMakeLists.txt
source/plugins/shape/ShapeFunctionXYZ/: CMakeLists.txt
source/plugins/shape/ShapeFunctionZ/: CMakeLists.txt
source/plugins/shape/ShapeHyperbolic/: CMakeLists.txt
source/plugins/shape/ShapeMapN/: CMakeLists.txt
source/plugins/shape/ShapeMesh/: CMakeLists.txt  ShapeMesh.cpp
source/plugins/sun/SunBuie/: CMakeLists.txt
source/plugins/sun/SunGaussian/: CMakeLists.txt
tests/: CMakeLists.txt
tests/cmake/: expect_exit_code.cmake  run_headless_benchmark_smoke.cmake  run_headless_script_error_smoke.cmake  run_headless_script_smoke.cmake
tests/soqt_smoketest/: CMakeLIsts.txt  CMakeLists.txt  main.cpp
tests/unit/libraries/math/: Box2DTests.cpp  CMakeLists.txt  IntervalTests.cpp
tests/updater/: CMakeLists.txt  main.cpp
